# BYU_CS

./: .gitignore  interview.java
345/: CMakeLists.txt  os345.c  os345.h  os345config.h  os345p1.c  os345signals.c  os345tasks.c
360/data_lab/: CMakeLists.txt
360/data_lab/datalab-handout/: bits.c  btest
360/dns/: a.out  dns.c  resolver  resolver.c
360/hw/: a.out  hw1_pw.txt  hw2_architecture.txt  hw2_show-bytes.c  hw4.txt  hw5.txt  hw7.txt
360/readerRabbit/: rabbit  readerRabbit.c  test.c
401/: Lasso.ipynb  Untitled.ipynb  lasso.py  sensitive.md  sensitive.py  weka.ipynb  weka.markdown  weka.py
401/movie-predictor/: imbd_predictions.ipynb
424ee/hw/: a.out  hw2.txt  hw2_helpcode.c  hw3.txt
424ee/target6/: .gdb_history  .p3.d.swp  .p5.hex.swp  .rtarget.d.swp  .skratch.txt.swp  a.txt  ctarget  ctarget.hex  p1raw  p2.asm  p2code.s  p2raw  p3.d  p3.s  p4.hex  rtarget  rtarget.d  tmp.txt
465/: aes.py
465/aes/: constants.py  crypto_math.py  utils.py
465/diffie_hillman/: dh.py  foo
465/hash_attack/: main.py
465/hw/: .~lock.hw3.ods#  hw2_ffmath  hw3.ods
465/mac/: attack.py  mac_main.py
501/: Lab3.ipynb  Untitled.ipynb  del.py  gradiant_decent_lab3.py  lab1_images.ipynb  lab3.py  lab4.ipynb  lab4.py  lab5.ipynb  lab5.py  lab5b.py  lab5deeper.py  lab6.ipynb  lab6.py  perceptron.py  perceptron2.py
501/deep_art/: README.md  deep_art.py  helper.py  vgg16.py
501/lab10/: char_rnn.ipynb  rnn.py
501/siamese_network/: input_data.py  list.txt  siamese.py  siamese_network_tensorflow.ipynb
dentium/: moonclerk.py
